--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,13 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
